@@ -2,6 +2,7 @@ Revision history for Perl module TestRail::API
 
 0.045 2019-05-11 TEODESIAN
     - Add getReports and runReport methods to TestRail::API
+    - Use a cookie jar when doing requests to use testrail sessions if enabled for the API
 
 0.044 2018-10-9 TEODESIAN
     - Add getCaseFields and addCaseField methods to TestRail::API
